--- a/parkup1/app/src/main/AndroidManifest.xml
+++ b/parkup1/app/src/main/AndroidManifest.xml
@@ -12,6 +12,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Parkup1"
+        android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
             android:name=".MainActivity"
@@ -45,6 +46,11 @@
             android:name=".Create"
             android:exported="true"
             android:parentActivityName=".Display" >
+        </activity>
+        <activity
+            android:name=".Register"
+            android:exported="true"
+            android:parentActivityName=".MainActivity" >
         </activity>
 
     </application>
