--- a/parkup1/app/src/main/AndroidManifest.xml
+++ b/parkup1/app/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.example.parkup1">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -51,6 +53,11 @@
             android:name=".Register"
             android:exported="true"
             android:parentActivityName=".MainActivity" >
+        </activity>
+        <activity
+            android:name=".ViewMeeting"
+            android:exported="true"
+            android:parentActivityName=".Display" >
         </activity>
 
     </application>
