--- a/parkup1/app/src/main/AndroidManifest.xml
+++ b/parkup1/app/src/main/AndroidManifest.xml
@@ -2,7 +2,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="com.example.parkup1">
-
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -51,6 +50,11 @@
             android:name=".Register"
             android:exported="true"
             android:parentActivityName=".MainActivity" >
+        </activity>
+        <activity
+            android:name=".ViewMeeting"
+            android:exported="true"
+            android:parentActivityName=".Display">
         </activity>
 
     </application>
